--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="carousel-item">
                   <h2 class="font-weight-bold">This Is my project im Portfolio first time</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, doloribus.dyyjhtyjujfgbrt76thg</p>
+                  <p>Lorem ipsum dolor sit amet consectetu adipisicing elit. Dicta, doloribus.dyyjhtyjujfgbrt76thg</p>
                   <button class="btn btn-primary">BOOk NOW</button>
                 </div>
                 <div class="carousel-item">
